...
                onSave()
            },
            modifier = Modifier
        ) {
            Icon(
                imageVector = Icons.Default.Save,
                contentDescription = "Guardar setup"
            )
        }
    }

    DisposableEffect(Unit){
        firstField.requestFocus()
...

@ExperimentalComposeUiApi
@Preview
@Composable
private fun AmountSetupFormPreview() {
    val converterState =
        AmountSetupState(field = NumberTextFieldState(number = 5.00, title = "Taza"), onChange = {})
    val amountState =
        AmountSetupState(field = NumberTextFieldState(number = 5.00, title = "Bs"), onChange = {})
    val amountsDollarState =
        AmountSetupState(field = NumberTextFieldState(number = 5.00, title = "$"), onChange = {})

    MyMarketApp {
        AmountSetupForm(
            converterState = converterState,
...
