<resources>
    <string name="app_name">My Market</string>
    <string name="string_dollar">%1$.2f $</string>
    <string name="string_bs">%1$.2f Bs</string>
    <string name="title_app">Mis Mercados</string>
    <string name="markets_empty">Todavia no se ha realizado el primer mercado</string>
    <string name="add_market">Add Market</string>
    <string name="word_testing">Taza de Conversion</string>
    <string name="button_open_product_section">Button show and hide product section</string>
    <string name="button_open_hide_setup_section">Open Setup Section</string>
    <string name="setup_section">AmountSetupForm</string>
    <string name="button_back">Back</string>
    <string name="product_form_section">ProductForm</string>
</resources>
