...
    ) { it ->
        Column(
            modifier = Modifier
                .padding(it)
                .padding(8.dp)
                .fillMaxSize()
                .semantics { contentDescription = "Detail Market Screen" }
        ) {
            AnimatedVisibility(
                visible = viewModel.setupController.isSectionVisible.value,
                enter = fadeIn() + slideInVertically(),
                exit = fadeOut() + slideOutVertically(),

...
